--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -60,6 +60,11 @@
     }
     a {
       color: var(--pink);
+      transition: filter 0.2s;
+
+      &:hover {
+        filter: brightness(0.9);
+      }
     }
   }
 }
