--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,3 +1,11 @@
+.maxWidth1120 {
+  max-width: 1120px;
+}
+
+.maxWidth720 {
+  max-width: 720px;
+}
+
 .btnload {
   background: transparent;
   border: 0;
