--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -36,16 +36,26 @@
 
   section {
     margin: 1.5rem 0 4rem;
-    display: flex;
-    gap: 1rem;
 
-    time,
-    span {
-      color: var(--gray-500);
+    div {
       display: flex;
-      align-items: center;
-      gap: 0.375rem;
-      font-size: 0.875rem;
+      gap: 1rem;
+
+      time,
+      span {
+        color: var(--gray-500);
+        display: flex;
+        align-items: center;
+        gap: 0.375rem;
+        font-size: 0.875rem;
+      }
+    }
+
+    .contentEdit {
+      time {
+        margin-top: 1rem;
+        font-style: italic;
+      }
     }
   }
 
@@ -65,6 +75,46 @@
       &:hover {
         filter: brightness(0.9);
       }
+    }
+  }
+}
+
+.baseboard {
+  margin: 0 auto;
+
+  hr {
+    opacity: 10%;
+    margin: 1rem 0;
+  }
+
+  .containerBtnPages {
+    display: flex;
+    margin: 2.5rem 0 3.5rem;
+
+    a {
+      span {
+        display: inline-block;
+        font-size: 1.125rem;
+        margin-bottom: 0.5rem;
+        color: var(--gray-500);
+      }
+    }
+  }
+
+  .btnPagesBefore {
+    margin-right: auto;
+  }
+
+  .btnPagesAfter {
+    margin-left: auto;
+  }
+
+  .btnExitPreview {
+    margin: 3rem 0;
+    transition: filter 0.2s;
+
+    &:hover {
+      filter: brightness(0.8);
     }
   }
 }
