--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -17,3 +17,15 @@
     filter: brightness(0.9);
   }
 }
+
+.btnExitPreview {
+  display: block;
+  text-align: center;
+  width: 100%;
+  padding: 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  font-weight: bold;
+  background-color: var(--white);
+  color: var(--black);
+}
